--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,15 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
     //Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //MySql
+    implementation 'mysql:mysql-connector-java:8.0.26'
 
     compileOnly 'org.projectlombok:lombok'
+
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
