--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=lol-come
+spring.datasource.url=jdbc:mysql://localhost:3306/lolcome
+spring.datasource.username=root
+spring.datasource.password=wkdgus1004ok!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+jwt.secret.key=dasdasasdasddddadwqdwqdwqdwddsacscvsdfsdfsd
