--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
+# Application settings
 spring.application.name=lol-come
+
+# DataSource configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/lolcome
 spring.datasource.username=root
 spring.datasource.password=wkdgus1004ok!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+# JWT secret key
 jwt.secret.key=dasdasasdasddddadwqdwqdwqdwddsacscvsdfsdfsd
+
+# Hibernate specific properties
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
